adds initial postgreSQL setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresgl://localhost:5432/Songr
+spring.datasource.username=postgres
+spring.datasource.password=Lifeface123!@#
+spring.datasource.driver-class-name=org.postgresql.Driver
