--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:postgresgl://localhost:5432/Songr
+spring.datasource.url=jdbc:postgresql://localhost:5432/Songr
 spring.datasource.username=postgres
-spring.datasource.password=Lifeface123!@#
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.password=tnuhc22
+spring.jpa.hibernate.dll-auto=update
+spring.jpa.generate-ddl=true
+spring.mvc.hiddenmethod.filter.enabled=true
